--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "dependencies": {
     "express": "^4.15.3",
+    "serve-favicon":"^2.4.3",
+    "morgan":"^1.8.1",
+    "body-parser":"^1.17.1",
+    "method-override":"^2.3.8",
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "node-cryptojs-aes": "^0.4.0",
