--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "morgan":"^1.8.1",
     "body-parser":"^1.17.1",
     "method-override":"^2.3.8",
+    "serve-static":"^1.12.3",
+    "errorhandler":"^1.5.0",
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "node-cryptojs-aes": "^0.4.0",
