Updated login and register
Cleaned up a few erroring GET requests (todo: remove aes.js from index.html), error catching for login and register fail terribly

--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "start": "supervisor app.js"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.1",
+    "errorhandler": "^1.5.0",
     "express": "^4.15.3",
-    "serve-favicon":"^2.4.3",
-    "morgan":"^1.8.1",
-    "body-parser":"^1.17.1",
-    "method-override":"^2.3.8",
-    "serve-static":"^1.12.3",
-    "errorhandler":"^1.5.0",
     "fs": "0.0.1-security",
     "http": "0.0.0",
+    "method-override": "^2.3.8",
+    "morgan": "^1.8.1",
     "node-cryptojs-aes": "^0.4.0",
     "path": "^0.12.7",
     "routes": "^2.1.0",
+    "serve-favicon": "^2.4.3",
+    "serve-static": "^1.12.3",
     "socket.io": "^2.0.1",
     "sqlite3": "^3.1.8"
   },
