--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "serve-favicon": "^2.4.3",
     "serve-static": "^1.12.3",
     "socket.io": "^2.0.1",
-    "sqlite3": "^3.1.8"
+    "sqlite3": "^3.1.8",
+    "block_io": "^1.0.9-2"
   },
   "devDependencies": {},
   "keywords": [],
