build: add travisci
This commit adds basic travis ci integration. It is still a work-in-progress
to add automated builds and testing.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": ""
   },
   "scripts": {
-    "start": "supervisor app.js"
+    "start": "supervisor app.js",
+    "test": "supervisor app.js"
   },
   "dependencies": {
     "bcrypt": "^1.0.2",
