--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   },
   "scripts": {
     "start": "supervisor app.js",
-    "test": "supervisor app.js"
+    "test": "node app.js"
   },
   "dependencies": {
-    "bcrypt": "^1.0.2",
+    "bcryptjs": "^1.0.2",
     "body-parser": "^1.17.1",
     "errorhandler": "^1.5.0",
     "express": "^4.15.3",
