--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "supervisor app.js",
-    "test": "node app.js"
+    "test": "sh test/start_tests.sh"
   },
   "dependencies": {
     "bcryptjs": "^1.0.2",
@@ -31,6 +31,7 @@
     "serve-favicon": "^2.4.3",
     "serve-static": "^1.12.3",
     "socket.io": "^2.0.1",
+    "socket.io-client": "^2.0.1",
     "sqlite3": "^3.1.8"
   },
   "devDependencies": {},
